# quite

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE.txt  README.md  REUSE.toml  default_sink  develop  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  sitemap.xml  start_weston_headless.sh  vcpkg.json  versions.json
example/qt/: CMakeLists.txt  manage_todo.feature
example/qt/cpp_test/: main.cpp  test_manage_todo.cpp
example/qt/python_test/: test_manage_todo.py
example/qt/test_application/: CMakeLists.txt  main.cpp
examples/qt-qml/: CMakeLists.txt  main.cpp
examples/qt-widgets/: CMakeLists.txt  main.cpp
integration_test/qt/cpp_test/: CMakeLists.txt  test_manage_todo.cpp
integration_test/qt/test_application/: CMakeLists.txt  main.cpp  main.qml  test_application_path.in.hpp
libs/: CMakeLists.txt
libs/client/: CMakeLists.txt
libs/client/src/: basic_probe.cpp  basic_probe.hpp  context.cpp  context.hpp  probe_handle.cpp  probe_manager.cpp  property.cpp  quite.cpp  remote_object.cpp
libs/client/test/: CMakeLists.txt
libs/core/: CMakeLists.txt  asio_config.hpp.in  asio_config.in.hpp  version.hpp.in  version.in.hpp
libs/core/src/: asio_context.cpp  crash_handler.cpp  error.cpp  image.cpp  image_utils.cpp  logger.cpp
libs/core/test/: CMakeLists.txt  main.cpp  test_error.cpp
libs/logger/: CMakeLists.txt
libs/logger/src/: logger.cpp
libs/manager/: CMakeLists.txt
libs/manager/protocol/: process_service.proto
libs/manager/src/: application_impl.cpp  application_impl.hpp  application_manager.cpp  basic_process_manager.cpp  noop_process.cpp  noop_process.hpp  process_handle.cpp  process_impl.cpp  process_impl.hpp  process_manager.cpp  process_manager_client.cpp  process_manager_client.hpp  remote_process_manager.cpp  remote_process_manager.hpp  server.cpp
libs/manager/tests/: CMakeLists.txt  main.cpp  runnable_exe.cpp  runnable_path.in.hpp  test_process_manager.cpp
libs/probe/: CMakeLists.txt
libs/probe/src/: asio_event.hpp  object_id.hpp  object_tracker.cpp  object_tracker.hpp  probe.cpp  probe_context.cpp  property_collector.cpp  property_collector.hpp  proto_converters.cpp  proto_converters.hpp  qtstdexec.h  screenshot.cpp  screenshot.hpp  snapshot.cpp  value_converters.cpp  value_converters.hpp
libs/probeqt/: CMakeLists.txt  meta_adapter.cpp  meta_adapter.hpp  meta_qt_containers.cpp  meta_qt_containers.hpp  method_invoker.cpp  method_invoker.hpp  object_handler.cpp  object_handler.hpp  object_id.hpp  object_tracker.cpp  object_tracker.hpp  probe_context.cpp  probe_context.hpp  probe_instances.cpp  probe_instances.hpp  property_collector.cpp  property_collector.hpp  proto_converters.cpp  qt_meta_registry.cpp  qt_meta_registry.hpp  qt_meta_type_accessor.cpp  qt_meta_type_accessor.hpp  qt_probe_handler.cpp  qt_probe_handler.hpp  qtstdexec.h  result.hpp  snapshot.cpp  snapshot.hpp  snapshot_handler.cpp  snapshot_handler.hpp  to_object_id.hpp  value_converters.cpp  value_converters.hpp
libs/probeqt/impl/: CMakeLists.txt  create_probe_context.cpp  create_probe_context.hpp  meta_adapter.hpp  meta_qt_containers.hpp  method_invoker.cpp  method_invoker.hpp  object_tracker.hpp  probe_context.hpp  property_collector.cpp  property_collector.hpp  qt_meta_registry.cpp  qt_meta_registry.hpp  qt_meta_type_accessor.cpp  qt_meta_type_accessor.hpp  qtstdexec.hpp  value_converters.cpp  value_converters.hpp
libs/probeqt/injector/: CMakeLists.txt  keyboard_injector.cpp  keyboard_injector.hpp  mouse_injector.cpp  mouse_injector.hpp
libs/probeqt/rpc/: CMakeLists.txt  create_snapshot.cpp  create_snapshot.hpp  exit_request.cpp  find_object.cpp  find_object.hpp  get_meta_object.cpp  get_meta_object.hpp  get_object_properties.cpp  get_object_properties.hpp  get_views.cpp  get_views.hpp  grpc_error.hpp  invoke_method.cpp  invoke_method.hpp  meta_find_type.cpp  meta_find_type.hpp  mouse_action.cpp  mouse_action.hpp
libs/probeqt/src/: probe_qt.cpp
libs/probeqt/tests/: CMakeLists.txt  main.cpp  test_method_invoker.cpp  test_object_tracker.cpp  test_probe_context.cpp  test_property_collector.cpp  test_qt_probe_handler.cpp  test_value_containers.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/object/: object.proto
libs/protocol/proto/: CMakeLists.txt
libs/protocol/src/: basic_object_client.cpp  error_helper.cpp  error_helper.hpp  meta_converters.cpp  meta_converters.hpp  object_client.cpp  object_server.cpp  object_service.cpp  protocol.cpp  rethrow.hpp  value.cpp  value.hpp
libs/protocol/test/: CMakeLists.txt  main.cpp  test_server.cpp
libs/protocol/tests/: CMakeLists.txt  main.cpp  test_server.cpp
libs/quite/: CMakeLists.txt  version.hpp.in
libs/quite/src/: api_handle.cpp  (+26 more)
libs/testing/: CMakeLists.txt
python/: CMakeLists.txt  binding.cpp
python/quite/: __init__.py  __init__.pyi  _quite.pyi
python/test/: CMakeLists.txt  test_probe.py  test_version.py
studio/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
studio/logic/: CMakeLists.txt  application_manager.cpp  application_manager.hpp  object_tree.cpp  object_tree.hpp  scheduler.cpp  scheduler.hpp
studio/windows/: CMakeLists.txt  application_overview.cpp  application_overview.hpp  aut_connector.cpp  aut_connector.hpp
test/: CMakeLists.txt
test/meta/: CMakeLists.txt  test_object_registry.cpp
test/probeqt/: CMakeLists.txt  async_test_helper.hpp  main.cpp  test_method_invoker.cpp  test_probe_handler.cpp  test_qt_meta_registry.cpp  test_value_converters.cpp  tets_method_invoker.cpp
test/protocol/: CMakeLists.txt  test_value.cpp
test/python/: CMakeLists.txt  test_application.py  test_probe.py  test_version.py
test/quite/: CMakeLists.txt  image_diff_test.cpp  meta_test.cpp  process_application.cpp  remote_object_test.cpp  test_application_manager.cpp  test_probe_manager.cpp
test/simple_tester/: CMakeLists.txt  MyCustomType.cpp  MyCustomType.hpp  MyLogArea.cpp  MyLogArea.hpp  TracyQmlInjection.cpp  TracyQmlInjection.hpp  main.cpp  main.qml  tester_app.in.hpp
(+1972 files in other folders)
